// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton RadioButton with custom testID renders properly 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "borderRadius": 18,
      },
    ]
  }
  testID="custom:testID"
>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "borderWidth": 2,
          "height": 20,
          "margin": 8,
          "width": 20,
        },
        {
          "borderColor": "rgba(73, 69, 79, 1)",
        },
      ]
    }
  />
</View>
`;

exports[`RadioButton renders properly 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "borderRadius": 18,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "borderWidth": 2,
          "height": 20,
          "margin": 8,
          "width": 20,
        },
        {
          "borderColor": "rgba(73, 69, 79, 1)",
        },
      ]
    }
  />
</View>
`;

exports[`RadioButton when RadioButton is wrapped by RadioButtonContext.Provider renders properly 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="radio"
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "borderRadius": 18,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "borderWidth": 2,
          "height": 20,
          "margin": 8,
          "width": 20,
        },
        {
          "borderColor": "rgba(103, 80, 164, 1)",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgba(103, 80, 164, 1)",
            "borderRadius": 5,
            "height": 10,
            "transform": [
              {
                "scale": 1,
              },
            ],
            "width": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;
